tests/ui/typeck/irrefutable-while-let-pattern.stderr
error[E0308]: mismatched types
  --> $DIR/irrefutable-while-let-pattern.rs:4:5
   |
LL |   fn foo() -> bool {
   |               ---- expected `bool` because of return type
LL | /     while let x = 0 {
LL | |
LL | |         return true;
LL | |     }
   | |_____^ expected `bool`, found `()`
   |
   = note: `while` loops evaluate to unit type `()`
note: It is determined that this might iterate zero times, regardless of the loop condition expression or pattern.
  --> $DIR/irrefutable-while-let-pattern.rs:4:5
   |
LL |     while let x = 0 {
   |     ^^^^^^^^^^^^^^^
help: If you are assuming that it will iterate at least once, consider using a `loop` expression instead.
  --> $DIR/irrefutable-while-let-pattern.rs:4:5
   |
LL |     while let x = 0 {
   |     ^^^^^^^^^^^^^^^
help: consider returning a value here
   |
LL ~     }
LL +     /* `bool` value */
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
